<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter_all"
        android:title="@string/all"/>


    <item
        android:id="@+id/filter_technology"
        android:title="@string/technology"/>

    <item
        android:id="@+id/filter_general"
        android:title="@string/general"/>

    <item
        android:id="@+id/filter_politics"
        android:title="@string/politics"/>

    <item
        android:id="@+id/filter_sports"
        android:title="@string/sports"/>

    <item
        android:id="@+id/filter_business"
        android:title="@string/business"/>

    <item
        android:id="@+id/filter_gaming"
        android:title="@string/gaming"/>

    <item
        android:id="@+id/filter_entertainment"
        android:title="@string/entertainment"/>

    <item
        android:id="@+id/filter_music"
        android:title="@string/music"/>

    <item
        android:id="@+id/filter_science_and_nature"
        android:title="@string/science_and_nature"/>

</menu>