<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_articles"
          android:enabled="true"
          android:icon="@drawable/ic_library_books_black_24dp"
          android:title="@string/action_articles"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_sources"
          android:title="@string/sources"
          android:enabled="true"
          android:icon="@drawable/ic_developer_board_black_24dp"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_account"
          android:title="@string/account"
          android:enabled="true"
          android:icon="@drawable/ic_account_circle_black_24dp"
          app:showAsAction="ifRoom"/>


</menu>